k8s/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator
spec:
  type: LoadBalancer
  selector:
    app: calculator
  ports:
    - port: 80
      targetPort: 80
      name: grpc-web
